--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         .login-container {
             position: relative;
-            background-color: white;
+            background-color: rgb(14, 14, 14);
             border-radius: 10px;
             padding: 30px;
             width: 90%;
